not-found edited and styled

--- a/src/components/NotFound/index.css
+++ b/src/components/NotFound/index.css
@@ -1,1 +1,6 @@
-/* Write your CSS here */
+.not-found {
+  font-weight: 600;
+  font-size: 24px;
+  color: #ffffff;
+  font-family: 'Bree Serif';
+}
