--- a/src/components/MatchCard/index.css
+++ b/src/components/MatchCard/index.css
@@ -1,1 +1,42 @@
-/* Write your CSS here */
+.competing-team-logo {
+  width: 34px;
+}
+
+.match-card-item {
+  /* border: solid 2px #475569; */
+  border-radius: 9px;
+  background-color: #1e293b;
+  color: #ffffff;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 7% 3%;
+  align-items: center;
+  margin: 9px 3px;
+  width: 47%;
+  height: 245px;
+  text-align: center;
+  box-shadow: 0 2px 5px 0 #9ef3bfad;
+}
+
+.competing-team-logo {
+  width: 54px;
+  margin-bottom: 5px;
+}
+
+.competing-team-name {
+  font-size: 11px;
+}
+
+.match-result {
+  font-size: 9px;
+}
+
+.match-status {
+  font-size: 10px;
+  color: #18ed66;
+}
+
+.lost {
+  color: #e31a1a;
+}
