--- a/src/components/TeamMatches/index.css
+++ b/src/components/TeamMatches/index.css
@@ -1,1 +1,67 @@
-/* Write your CSS here */
+.team-matches-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  min-height: 100vh;
+  font-family: 'Bree Serif';
+}
+
+.upper-section {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.team-banner {
+  width: 90%;
+}
+
+.latest-match-title {
+  font-size: 9px;
+  text-align: left;
+  color: #ffffff;
+}
+
+.team-recent-matches-list {
+  list-style-type: none;
+  padding-left: 0;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 90%;
+  flex-wrap: wrap;
+}
+
+.kxp {
+  background-image: linear-gradient(to bottom, #d91c1f, #1e293b);
+}
+
+.rcb {
+  background-image: linear-gradient(to bottom, #a4261d, #1e293b);
+}
+
+.kkr {
+  background-image: linear-gradient(to bottom, #5755a7, #1e293b);
+}
+
+.csk {
+  background-image: linear-gradient(to bottom, #f7db00, #1e293b);
+}
+
+.rr {
+  background-image: linear-gradient(to bottom, #da237b, #1e293b);
+}
+
+.mi {
+  background-image: linear-gradient(to bottom, #13418b, #1e293b);
+}
+
+.sh {
+  background-image: linear-gradient(to bottom, #f26d22, #1e293b);
+}
+
+.dc {
+  background-image: linear-gradient(to bottom, #4f5db0, #1e293b);
+}
