not-found Route styled

--- a/src/components/NotFound/index.css
+++ b/src/components/NotFound/index.css
@@ -1,3 +1,12 @@
+.not-found-container {
+  background-image: url('https://assets.ccbp.in/frontend/react-js/ipl-dashboard-sm-bg.png');
+  background-size: cover;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .not-found {
   font-weight: 600;
   font-size: 24px;
