--- a/src/components/LatestMatch/index.css
+++ b/src/components/LatestMatch/index.css
@@ -2,6 +2,13 @@
   background-color: #0f172a;
   border-radius: 13px;
 }
+@media (min-width: 992px) {
+  .latest-match-card {
+    display: flex;
+    justify-content: space-between;
+    padding: 5px 17px;
+  }
+}
 
 .match-venue-result-card {
   display: flex;
@@ -10,36 +17,58 @@
   padding: 7px;
   border-bottom: solid 2px #475569;
 }
-
 .venue-details {
   color: #ffffff;
   width: 56%;
+}
+@media (min-width: 992px) {
+  .match-venue-result-card {
+    width: 65%;
+    border: none;
+  }
+  .venue-details {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
 }
 
 .latest-competing-team {
   font-size: 19px;
   margin-bottom: 0;
 }
-
 .latest-match-date {
   font-size: 15px;
 }
-
 .latest-match-venue {
   font-size: 11px;
 }
-
 .latest-match-result {
   font-size: 11px;
+}
+@media (min-width: 992px) {
+  .latest-competing-team {
+    font-size: 20px;
+  }
 }
 
 .latest-match-logo {
   width: 56px;
 }
+@media (min-width: 992px) {
+  .latest-match-logo {
+    width: 183px;
+  }
+}
 
 .latest-match-details {
   padding: 7px;
   color: #ffffff;
+}
+@media (min-width: 992px) {
+  .latest-match-details {
+    text-align: right;
+  }
 }
 
 .latest-match-innings-list {
@@ -48,7 +77,7 @@
 }
 
 .innings-item {
-  margin-bottom: 3px;
+  margin-bottom: 13px;
   font-size: 11px;
 }
 
@@ -57,5 +86,10 @@
   margin-bottom: 3px;
 }
 .man-of-match {
+  margin-top: 0;
+}
+.item-para {
+  font-size: 11px;
+  margin-bottom: 0;
   margin-top: 0;
 }
