--- a/src/components/MatchCard/index.css
+++ b/src/components/MatchCard/index.css
@@ -1,9 +1,4 @@
-.competing-team-logo {
-  width: 34px;
-}
-
 .match-card-item {
-  /* border: solid 2px #475569; */
   border-radius: 9px;
   background-color: #1e293b;
   color: #ffffff;
@@ -18,25 +13,49 @@
   text-align: center;
   box-shadow: 0 2px 5px 0 #9ef3bfad;
 }
+@media (min-width: 992px) {
+  .match-card-item {
+    width: 30%;
+    height: 346px;
+    justify-content: center;
+    padding: 3px;
+  }
+}
 
 .competing-team-logo {
   width: 54px;
   margin-bottom: 5px;
 }
+@media (min-width: 992px) {
+  .competing-team-logo {
+    width: 96px;
+  }
+}
 
 .competing-team-name {
   font-size: 11px;
 }
-
 .match-result {
   font-size: 9px;
+}
+@media (min-width: 992px) {
+  .competing-team-name {
+    font-size: 15px;
+  }
+  .match-result {
+    font-size: 11px;
+  }
 }
 
 .match-status {
   font-size: 10px;
   color: #18ed66;
 }
-
 .lost {
   color: #e31a1a;
+}
+@media (min-width: 992px) {
+  .match-status {
+    font-size: 12px;
+  }
 }
