--- a/src/components/NotFound/index.css
+++ b/src/components/NotFound/index.css
@@ -6,6 +6,11 @@
   justify-content: center;
   align-items: center;
 }
+@media (min-width: 992px) {
+  .not-found-container {
+    background-image: url('https://assets.ccbp.in/frontend/react-js/ipl-dashboard-lg-bg.png');
+  }
+}
 
 .not-found {
   font-weight: 600;
