--- a/src/components/TeamMatches/index.css
+++ b/src/components/TeamMatches/index.css
@@ -19,10 +19,20 @@
   width: 90%;
 }
 
+.latest-match-section {
+  width: 85%;
+}
+
 .latest-match-title {
   font-size: 9px;
   text-align: left;
   color: #ffffff;
+}
+@media (min-width: 992px) {
+  .latest-match-title {
+    font-size: 13px;
+    margin-bottom: 3px;
+  }
 }
 
 .team-recent-matches-list {
@@ -33,6 +43,12 @@
   align-items: center;
   width: 90%;
   flex-wrap: wrap;
+}
+
+@media (min-width: 992px) {
+  .team-recent-matches-list {
+    width: 85%;
+  }
 }
 
 .kxp {
